Replace guava ImmutableMap with default immutable map